<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/prof_drawer_layout"
    tools:context=".homeActivity"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/signup_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_back_24"
        app:titleTextColor="@color/black" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="30sp"
        android:background="@drawable/beach_background"
        android:paddingTop="130sp">

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/allan_bold"
            android:text="Sign up to SoCalBeach"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_signup_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#B60000" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:hint="@string/your_name"
            android:inputType="textPersonName"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:hint="@string/your_pwd"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/et_repassword"
            android:layout_width="320dp"
            android:layout_height="55dp"
            android:hint="@string/re_type_password"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/allan_bold"
            android:paddingTop="4dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>
    </RelativeLayout>
</androidx.drawerlayout.widget.DrawerLayout>