<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/userPwdInput"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    android:background="@drawable/beach_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
...
        android:layout_marginTop="5dp"
        android:fontFamily="@font/allerta"
        android:text="@string/register_remind"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_to_sign_up"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:fontFamily="@font/allan_bold"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/register" />
...
